--- a/Poritish_Bardhan/WeatherApp/app/src/main/AndroidManifest.xml
+++ b/Poritish_Bardhan/WeatherApp/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.example.weatherapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".MainActivity6"></activity>
+        <activity android:name=".MainActivity7"></activity>
+        <activity android:name=".MainActivity6" />
         <activity android:name=".MainActivity3" />
         <activity android:name=".MainActivity2" />
         <activity android:name=".MainActivity">
